--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "ejs-mate": "^4.0.0",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
+    "i": "^0.3.7",
     "joi": "^17.13.1",
     "method-override": "^3.0.0",
     "mongoose": "^8.4.0",
     "multer": "^1.4.5-lts.1",
-    "multer-storage-cloudinary": "^4.0.0",
+    "multer-storage-cloudinary": "^2.2.1",
+    "npm": "^10.8.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0"
